# Exo-CC

./: README.md  build.gradle  core_settings.gradle
demos/main/: build.gradle
demos/main/noExtensions/release/: output-metadata.json
demos/main/src/main/assets/: media.exolist.json
demos/main/src/main/java/com/google/android/exoplayer2/demo/: PlayerActivity.java
demos/main/src/main/res/layout/: player_activity.xml
extensions/cce/: build.gradle
extensions/cce/src/main/: AndroidManifest.xml
extensions/cce/src/main/java/com/google/android/exoplayer2/ext/cce/: CceLibrary.java  package-info.java
extensions/cce/src/main/jni/: CMakeLists.txt  android_log.h  cce.c  cce.h  ccejni.c
extensions/cce/src/main/jni/lib_ccx/: ccx_common_option.c  ccx_common_platform.h  ccx_decoders_708_output.c  ccx_decoders_common.c  ccx_decoders_structs.h  ccx_demuxer.c  ccx_dtvcc.c  ccx_encoders_common.c  ccx_encoders_g608.c  ccx_encoders_helpers.c  ccx_encoders_python.c  ccx_encoders_scc.c  ccx_encoders_splitbysentence.c  ccx_encoders_spupng.c  ccx_encoders_srt.c  ccx_encoders_ssa.c  ccx_sub_entry_message.pb-c.h  es_userdata.c  file_functions.c  general_loop.c  lib_ccx.c  list.h  output.c  params.c  sequencing.c  telxcc.c  ts_functions.c  ts_tables_epg.c  utility.c  utility.h
gradle/wrapper/: gradle-wrapper.properties
